// Vitest Snapshot v1

exports[`test Ellipsis props > test Ellipsis direction center 1`] = `
"<div class=\\"n-ellipsis\\">
  <div class=\\"n-ellipsis--calculate\\">先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急......，恢弘志士之气，不宜妄自菲薄，引喻失义，以塞忠谏之路也</div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`test Ellipsis props > test Ellipsis direction start 1`] = `
"<div class=\\"n-ellipsis\\">
  <div class=\\"n-ellipsis--calculate\\">...先帝之殊遇，欲报之于陛下也。诚宜开张圣听，以光先帝遗德，恢弘志士之气，不宜妄自菲薄，引喻失义，以塞忠谏之路也</div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`test Ellipsis props > test Ellipsis expandText && collapseText 1`] = `
"<div class=\\"n-ellipsis\\">
  <div class=\\"n-ellipsis--calculate\\">先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急存亡之秋也。然侍卫之臣不懈于内，忠志之士忘身于外者，盖追...打开</div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`test Ellipsis props > test Ellipsis rows 1`] = `
"<div class=\\"n-ellipsis\\">
  <div class=\\"n-ellipsis--calculate\\">先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急存亡之秋也。然侍卫之臣不懈于内，忠志之士忘身于外者，盖追...</div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`test Ellipsis props > test Ellipsis showExpand 1`] = `
"<div class=\\"n-ellipsis\\">
  <div class=\\"n-ellipsis--calculate\\">先帝创业未半而中道崩殂，今天下三分，益州疲弊，此诚危急存亡之秋也。然侍卫之臣不懈于内，忠志之士忘身于外者，盖追...展开</div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</div>"
`;
